<package>
  <name>sps</name>
  <version>0.0.0</version>

  <description>SPS robot simulator</description>
  <maintainer email="enric.cervera.mateu@cern.ch">Enric Cervera-Mateu</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>realsense2_description</run_depend>
  
</package>
